force-app/main/default/objects/SVMXA360__CONF_Expression__c/SVMXA360__CONF_Expression__c.object-meta.xml
<CustomObject>
    <description>Stores the Expression information.</description>
    <label>Expression</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Expression Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expressions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>