force-app/main/default/objects/SVMXA360__CONF_Expression__c/fields/SVMXA360__AdvancedExpression__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AdvancedExpression__c</fullName>
    <description>The advanced expression.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Advanced Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>