force-app/main/default/objects/SVMXA360__CONF_Expression__c/fields/SVMXA360__Criteria__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Criteria__c</fullName>
    <description>The SOQL query clause for the expression.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Criteria</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>