force-app/main/default/objects/SVMXA360__CONF_Expression__c/fields/SVMXA360__ExpressionFields__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ExpressionFields__c</fullName>
    <description>The field API names used in the expression rules.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expression Fields</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>