force-app/main/default/objects/SVMXA360__CONF_Expression__c/fields/SVMXA360__ExpressionJSON__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ExpressionJSON__c</fullName>
    <description>The JSON formatted String of the complete expression.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expression JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>