force-app/main/default/objects/SVMXA360__CONF_Expression__c/fields/SVMXA360__ExpressionType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ExpressionType__c</fullName>
    <description>To determine whether the expression will be used for Entitlement rule, lookup, or, be common.</description>
    <label>Expression Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COMM-EXPRESSION</fullName>
            </value>
            <value>
                <fullName>EVER-RULE-CRITERIA</fullName>
            </value>
            <value>
                <fullName>LOOKUP-EXPRESSION</fullName>
            </value>
            <value>
                <fullName>VISIBILITY-RULE-CRITERIA</fullName>
            </value>
            <value>
                <fullName>CONFIGURATION-FILTER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>